[gd_scene load_steps=7 format=3 uid="uid://bn778bd7q3d3f"]

[ext_resource type="Script" path="res://scripts/perfil.gd" id="1_n111a"]
[ext_resource type="Texture2D" uid="uid://eytlp06nbixy" path="res://assets/PlayerIcon.png" id="1_q7qj1"]
[ext_resource type="Texture2D" uid="uid://cm8lb4ltw2yyb" path="res://assets/PlayerThink.png" id="3_l33re"]

[sub_resource type="Animation" id="Animation_3ga8n"]
resource_name = "Thinking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerThink:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_ga8jm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerThink:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1xx0m"]
_data = {
"RESET": SubResource("Animation_ga8jm"),
"Thinking": SubResource("Animation_3ga8n")
}

[node name="Perfil" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n111a")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 10
alignment = 1

[node name="PlayerIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_q7qj1")
expand_mode = 2

[node name="PlayerThink" type="TextureRect" parent="HBoxContainer/PlayerIcon"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(20, 20)
texture = ExtResource("3_l33re")
expand_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/PlayerIcon"]
autoplay = "Thinking"
libraries = {
"": SubResource("AnimationLibrary_1xx0m")
}

[node name="PlayerName" type="Label" parent="HBoxContainer"]
layout_mode = 2
vertical_alignment = 1
